@@ -67,13 +67,7 @@ double poppler_page_get_width(void* poppler_page)
       return -1;
    }
    
-
-#ifdef POPPLER_0_4
-   return PAGE(poppler_page)->getWidth();
-#else
    return PAGE(poppler_page)->getMediaWidth();
-#endif
-
 }
 
 double poppler_page_get_height(void* poppler_page)
@@ -83,9 +77,5 @@ double poppler_page_get_height(void* poppler_page)
       return -1;
    }
    
-#ifdef POPPLER_0_4
-   return PAGE(poppler_page)->getHeight();
-#else
    return PAGE(poppler_page)->getMediaHeight();
-#endif
 }
