@@ -35,16 +35,12 @@ void* poppler_splash_device_create(int bg_red, int bg_green, int bg_blue)
 {  
    BEGIN_SYNCHRONIZED;
       SplashColor white;
-#ifdef POPPLER_0_4
-      white.rgb8 = splashMakeRGB8(bg_red, bg_green, bg_blue);
-      void* splashDevice = new SplashOutputDev(splashModeRGB8, gFalse, white);
-#else // 0.5, 0.6
+
       white[0] = bg_red;
       white[1] = bg_green;
       white[2] = bg_blue;
       // I'm not sure what bitmapRowPad should be, 1 is just a guess.
       void* splashDevice = new SplashOutputDev(splashModeRGB8, 1, gFalse, white);
-#endif
    END_SYNCHRONIZED;
    
    return splashDevice;
@@ -85,17 +81,11 @@ int poppler_splash_device_display_slice(void* output_dev, void* poppler_page,
    SYNCHRONIZED(PAGE(poppler_page)->displaySlice(SPLASH_DEV(output_dev),
                                                  (double)hDPI, (double)vDPI,
                                                  rotate,
-#ifndef POPPLER_0_4 // 0.5, 0.6
 						 gTrue, // useMediaBox
-#endif
                                                  gTrue, // Crop
                                                  (int)sliceX, (int)sliceY,
-                                                 (int)sliceW, (int)sliceH,
-#ifdef POPPLER_0_6
-												 gFalse, // printing
-#else
-                                                 NULL, // Links
-#endif
+                                                 (int)sliceW, (int)sliceH, 
+                                                 gFalse, // printing
                                                  PDF_DOC(poppler_document)->getCatalog()));
 
    return 1;
@@ -124,35 +114,20 @@ int poppler_splash_device_get_rgb(void* bitmap, unsigned char** data)
       return 0;
    }
 
-#ifdef POPPLER_0_4
-   SplashRGB8*     rgb8;
-#else // 0.5, 0.6
    SplashColorPtr  color;
-#endif
    unsigned char*  dataPtr;
 
-#ifdef POPPLER_0_4
-   rgb8 = SPLASH_BITMAP(bitmap)->getDataPtr().rgb8;
-#else // 0.5, 0.6
    color = SPLASH_BITMAP(bitmap)->getDataPtr();
-#endif
 
    dataPtr = *data;
    for (int row = 0; row < SPLASH_BITMAP(bitmap)->getHeight(); row++)
    {
       for (int col = 0; col < SPLASH_BITMAP(bitmap)->getWidth(); col++)
       {
-#ifdef POPPLER_0_4
-         *dataPtr++ = splashRGB8R(*rgb8);
-         *dataPtr++ = splashRGB8G(*rgb8);
-         *dataPtr++ = splashRGB8B(*rgb8);
-         ++rgb8;
-#else // 0.5, 0.6
 	 *dataPtr++ = splashRGB8R(color);
 	 *dataPtr++ = splashRGB8G(color);
 	 *dataPtr++ = splashRGB8B(color);
 	 color = color + 3;
-#endif
       }
    }
    return 1;
